# latent-aggregation

./: .gitignore  .pre-commit-config.yaml  README.md  data.dvc  env.yaml  matrioska_learning.dvc  mkdocs.yml  pyproject.toml  setup.cfg  tmp.txt
.dvc/: config
.github/workflows/: publish.yml  test_suite.yml
conf/: aggr_exp.yaml  analysis.yaml  analysis_disj.yaml  analyze_part_shared_part_novel.yaml  analyze_same_classes_disj_samples.yaml  analyze_totally_disjoint.yaml  class_subsets.yaml  default.yaml  disjoint_exp.yaml  divide_in_nondisjoint_tasks.yaml  divide_in_tasks.yaml  federated_learning.yaml  matrioska_learning.yaml  prelim_exp.yaml  prepare_data_part_shared_part_novel.yaml  prepare_data_same_classes_disj_samples.yaml  prepare_data_totally_disjoint.yaml  relative_supervision.yaml  run_part_shared_part_novel.yaml  run_same_classes_disj_samples.yaml  run_totally_disjoint.yaml
conf/dataset/: cifar100.yaml  mnist.yaml  tiny_imagenet.yaml
conf/nn/: aggr_exp.yaml  default.yaml  disjoint_exp.yaml  part_shared_part_novel.yaml  prelim_exp.yaml  totally_disjoint.yaml
conf/nn/model/: efficient_net.yaml  resnet.yaml  shake_resnet.yaml  student_cnn.yaml  student_cnn_relative.yaml  vanilla_cnn.yaml
conf/prelim_exp/train/: prelim_exp.yaml
conf/train/: aggr_exp.yaml  disjoint_exp.yaml  matrioska.yaml  part_shared_part_novel.yaml  same_classes_disj_samples.yaml  totally_disjoint.yaml
docs/: index.md
notebooks/: aggr_exp_analysis.ipynb  create_latex_tables.ipynb  disj_exp_analysis.ipynb  divide_data_in_tasks.ipynb  encode_data_vision.ipynb  eval_matrioska.ipynb  matrioska_learning.ipynb  merge_spaces.ipynb  paper_plots.ipynb  perf.tsv  prelim_exp_analysis.ipynb  relative-distillation.ipynb  relative_supervision_simpler_model.ipynb  resnet_analysis.ipynb
paper_results/: exp_1_cka_analysis.json  exp_1_classification_results.json  exp_1_separability_analysis.json  exp_2_classification_results.json  exp_2_separability_analysis.json  exp_3_classification_results.json  exp_3_separability_analysis.json  exp_class_subsets.json  matrioska.json
shell_scripts/: clean_hf_cache.sh  prepare_data_part_shared_part_novel.sh  prepare_data_same_classes_disj_samples.sh  prepare_data_totally_disjoint.sh  run_part_shared_part_novel.sh  run_same_classes_disj_samples.sh  run_totally_disjoint.sh
src/la/: __init__.py  divide_data_across_samples.py  divide_data_in_tasks.py  run.py  run_aggr_exp.py  run_analysis.py  run_disj_analysis.py  run_disjoint_exp.py
src/la/data/: aggr_exp_datamodule.py  aggr_exp_dataset.py  datamodule.py  my_dataset_dict.py  part_shared_part_novel_datamodule.py  prelim_exp_datamodule.py  same_classes_disj_samples_datamodule.py  totally_disjoint_datamodule.py
src/la/modules/: efficient_net.py  mlp_projector.py  module.py  relative_vanilla_cnn.py  resnet.py  shake_resnet.py  vanilla_cnn.py  vanilla_cnn_student.py
src/la/outputs/2023-04-20/14-49-22/.hydra/: config.yaml  hydra.yaml
src/la/outputs/2023-04-20/14-53-05/.hydra/: config.yaml  hydra.yaml
src/la/outputs/2023-04-20/14-56-04/.hydra/: config.yaml  hydra.yaml
src/la/outputs/2023-04-20/14-57-08/.hydra/: hydra.yaml
src/la/outputs/2023-04-20/15-07-44/.hydra/: hydra.yaml
src/la/outputs/2023-04-20/15-08-18/.hydra/: hydra.yaml
src/la/outputs/2023-04-20/15-08-57/.hydra/: config.yaml  hydra.yaml
src/la/outputs/2023-04-20/15-10-09/.hydra/: config.yaml  hydra.yaml
src/la/outputs/2023-04-20/15-10-31/.hydra/: hydra.yaml
src/la/outputs/2023-04-20/15-13-39/.hydra/: hydra.yaml
src/la/outputs/2023-04-20/15-14-07/.hydra/: hydra.yaml
src/la/outputs/2023-04-20/15-14-20/.hydra/: config.yaml  hydra.yaml
src/la/pl_modules/: classifier.py  efficient_net.py  from_scratch_cnn.py  pl_module.py  resnet.py  student_from_scratch_cnn.py  student_pl_module.py
src/la/prelim_exp/: prelim_exp_dataset.py  run_prelim_exp.py
src/la/scripts/: analyze_class_subsets.py  analyze_part_shared_part_novel.py  analyze_same_classes_disj_samples.py  analyze_totally_disjoint.py  embed_totally_disjoint.py  federated_learning.py  prepare_data_part_shared_part_novel.py  prepare_data_same_classes_disj_samples.py  prepare_data_totally_disjoint.py  run_class_subsets.py  run_part_shared_part_novel.py  run_same_classes_disj_samples.py  run_totally_disjoint.py  tmp.py
src/la/ui/: run.py
src/la/utils/: cka.py  class_analysis.py  io_utils.py  rel_utils.py  relative_analysis.py  separability_analysis.py  task_utils.py  utils.py
tests/: conftest.py  test_checkpoint.py  test_configuration.py  test_resume.py
(+4 files in other folders)
