[metadata]
name = latent-aggregation
description = Aggregating those latents.
url = https://github.com/crisostomi/latent-aggregation
long_description = file: README.md
author = Donato Crisostomi
author_email = donatocrisostomi@gmail.com
keywords = python
license = MIT Licence


[options.entry_points]
console_scripts =
    prepare_data_part_shared_part_novel = la.scripts.prepare_data_part_shared_part_novel:main
    prepare_data_same_classes_disj_samples = la.scripts.prepare_data_same_classes_disj_samples:run
    prepare_data_totally_disjoint = la.scripts.prepare_data_totally_disjoint:run
    run_part_shared_part_novel = la.scripts.run_part_shared_part_novel:run
    run_same_classes_disj_samples = la.scripts.run_same_classes_disj_samples:run
    run_totally_disjoint = la.scripts.run_totally_disjoint:run
    analyze_part_shared_part_novel = la.scripts.analyze_part_shared_part_novel:run
    analyze_same_classes_disj_samples = la.scripts.analyze_same_classes_disj_samples:run
    analyze_totally_disjoint = la.scripts.analyze_totally_disjoint:run
    embed_totally_disjoint = la.scripts.embed_totally_disjoint:run

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
install_requires =
    nn-template-core==0.2.*

    # Add project specific dependencies
    # Stuff easy to break with updates
    pytorch-lightning==1.7.*
    torchmetrics==0.10.*
    hydra-core==1.2.*
    wandb
    streamlit
    timm
    transformers
    datasets
    dvc_gdrive
    hdf5storage
    tueplots
    scikit-learn
    kornia
    plotly
    nbformat
    # hydra-joblib-launcher

    # Stable stuff usually backward compatible
    rich
    dvc
    python-dotenv
    matplotlib
    stqdm
    backports.strenum

[options.packages.find]
where=src

[options.package_data]
* = *.txt, *.md

[options.extras_require]
docs =
    mkdocs
    mkdocs-material
    mike

test =
    pytest
    pytest-cov

dev =
    black
    flake8
    isort
    pre-commit
    bandit
    %(test)s
    %(docs)s
